add tags registration

--- a/ToDo.Tests/ToDo.Tests.csproj
+++ b/ToDo.Tests/ToDo.Tests.csproj
@@ -45,7 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainWindowViewModelTests.cs" />
+    <Compile Include="AcceptanceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
