--- a/ToDo.Tests/ToDo.Tests.csproj
+++ b/ToDo.Tests/ToDo.Tests.csproj
@@ -33,6 +33,7 @@
     <Reference Include="NSubstitute">
       <HintPath>..\packages\NSubstitute.1.7.2.0\lib\NET45\NSubstitute.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
